Fix nav spacing for section subnavs

--- a/app/assets/stylesheets/redesign/components/nav.sass
+++ b/app/assets/stylesheets/redesign/components/nav.sass
@@ -20,6 +20,9 @@ nav
     &:hover, &:active, &.active
       border-bottom: 5px solid $teal-light
       color: $teal-dark
+  &.section-nav
+    text-transform: uppercase
+    margin-bottom: 30px
 
 .outer-modal-container
   // display: flex
